# openFDTD

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: grid1D.hpp  materials.hpp
include/: grid1D.hpp  matrix.hpp  tensor.hpp
src/: grid1D.cpp  imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp  main.cpp  materials.cpp
